<resources>
    <string name="app_name">ProgramowanieAplikacjiAndroid</string>
    <string name="back">Powrót</string>
    <string name="name">Imię</string>
    <string name="name_input">Podaj imię</string>
    <string name="surname">Nazwisko</string>
    <string name="surname_input">Podaj nazwisko</string>
    <string name="grades">Oceny</string>
    <string name="grades_input">Podaj liczbę ocen [5–15]</string>
    <string name="grade_average">Oblicz średnią</string>
    <string name="delete_all">Delete all</string>
    <string name="phone_producer">Producer</string>
    <string name="phone_model">Model</string>
    <string name="phone_version">Version</string>
    <string name="phone_website">Website</string>
    <string name="enter_producer">Enter producer</string>
    <string name="enter_model">Enter model</string>
    <string name="enter_version">Enter version</string>
    <string name="enter_website">Enter website</string>
    <string name="website_button">WEBSITE</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="text_validation_success">Wprowadzono poprawne dane</string>
    <string name="address">Adres</string>
    <string name="url">https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.4.36.tar.xz</string>
    <string name="filesize">Rozmiar pliku</string>
    <string name="typ_pliku">Typ pliku</string>
    <string name="filetype">Typ pliku</string>
    <string name="downloaded_bytes">Pobrane bajty</string>
    <string name="get_info">Pobierz informacje</string>
    <string name="downloadFile">Pobierz plik</string>
    <string name="save_image">Save image</string>
    <string name="show_images">Show images</string>
    <string name="x">X</string>
    <string-array name="grades_list">
        <item>Android</item>
        <item>iOS</item>
        <item>Docker</item>
        <item>Szkielety programistyczne</item>
        <item>Interakcja człowiek-komputer</item>
        <item>Bazy danych</item>
        <item>Java</item>
        <item>C++</item>
        <item>Projekt zespołowy</item>
        <item>PHP</item>
        <item>Inżynieria oprogramowania</item>
        <item>Sztuczna Inteligencja</item>
        <item>Systemy Wbudowane</item>
        <item>Sieci komputerowe</item>
        <item>Grafika komputerowa</item>
    </string-array>
    <string name="menuButton1">Oceny</string>
    <string name="menuButton2">Telefony</string>
    <string name="menuButton3">Pobieranie</string>
    <string name="menuButton4">Rysowanie</string>
    <string name="menuTittle">Android Laboratorium</string>
    <string name="lab1Activity">Laboratorium 1</string>
    <string name="formName">Imię:</string>
    <string name="fromNameHint">wprowadz imie</string>
    <string name="fromGradesAmountHint">wprowadz liczbe ocen (5–15)</string>
    <string name="formSurname">Nazwisko:</string>
    <string name="formSurnameHint">wprowadz nazwisko</string>
    <string name="formGradesAmount">Liczba ocen:</string>
    <string name="gradesBigCap">OCENY</string>
    <string name="gradeText">Ocena:</string>
    <string name="lab2_2tittle">SPIS PRZEDMIOTÓW Z OCENAMI</string>
    <string name="deletePhones">Usuń wszystkie</string>
    <string name="addPhone">Dodaj telefon</string>
    <string name="phoneBrand">Marka:</string>
    <string name="insertPhoneBrand">Podaj marke telefonu</string>
    <string name="insertPhoneModel">Podaj model telefonu</string>
    <string name="phoneModel">Model:</string>
    <string name="insertPhoneOSversion">Podaj wersję systemu</string>
    <string name="phoneOSversion">Wersja Androida:</string>
    <string name="phoneWebsite">Strona WWW:</string>
    <string name="insertPhoneWebsite">Podaj stronę www</string>
    <string name="cancel">Anuluj</string>
    <string name="average">ŚREDNIA</string>
    <string name="downloadedBytes">Pobrano:</string>
    <string name="downloadButton">POBIERZ PLIK</string>
    <string name="fileType">Typ pliku:</string>
    <string name="fileSize">Rozmiar pliku:</string>
    <string name="downloadFileInfoButton">POBIERZ INFORMACJE</string>
    <string name="fileURLhint">podaj adres do pliku</string>
    <string name="fileURL">https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.4.36.tar.xz</string>
    <string name="downloadingEnded">Zakończono pobieranie</string>
    <string name="cancelDownload">Anuluj pobieranie</string>
    <string name="invalidURL">Niepoprawny adres</string>
    <string name="save">ZAPISZ</string>
    <string name="gallery">GALERIA</string>
    <string name="imgDescription">drawing from Lab5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nazwa_pliku">Nazwa pliku</string>
    <string name="zapisz_obraz">Zapisz obraz</string>
</resources>