<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Lab4Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20sp"
        android:shrinkColumns="*"
        android:stretchColumns="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TableRow>
            <TextView android:text="@string/address" />
            <EditText
                android:id="@+id/url"
                android:layout_span="2"
                android:text="@string/url" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/getInfo"
                android:layout_span="3"
                android:text="@string/get_info" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/filesize" />
            <TextView
                android:id="@+id/filsize"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/filetype" />
            <TextView
                android:id="@+id/filetype"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/downloadFile"
                android:layout_span="3"
                android:text="@string/downloadFile" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/downloaded_bytes" />
            <TextView
                android:id="@+id/downloadedBytes"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>